fix(arc-375): ensure dropdown don't cut off

--- a/src/modules/reading-room/components/FilterMenu/FilterForm/FilterForm.module.scss
+++ b/src/modules/reading-room/components/FilterMenu/FilterForm/FilterForm.module.scss
@@ -31,6 +31,13 @@
 	@include respond-to(md) {
 		flex-grow: 1;
 	}
+
+	// Ensure dropdowns fit in the minimal body (1 default field & add-new button)
+	:global(.c-react-select__menu-list) {
+		overflow: auto;
+		height: $spacer-1xl * 4.5;
+		max-height: $spacer-1xl * 4.5;
+	}
 }
 
 .c-filter-form__footer {
